--- a/css/memorygame.css
+++ b/css/memorygame.css
@@ -196,32 +196,33 @@ body {
 
 
 
-/*@media (max-width: 768px) {*/
-    /*.container{*/
-        /*padding: 0;*/
-    /*}*/
-    /*.col-xs-3 {*/
-        /*width: 75px;*/
-        /*height: 75px;*/
-    /*}*/
-    /*.col-xs-2{*/
-        /*width: 50px;*/
-        /*height: 50px;*/
-    /*}*/
+@media (max-width: 768px) {
+    .container{
+        padding: 0;
+    }
+    .col-xs-3 {
+        width: 75px;
+        height: 75px;
+    }
+    .col-xs-2{
+        width: 50px;
+        height: 50px;
+        margin: 3px;
+    }
 
-    /*.col-xs-1{*/
-        /*width: 40px;*/
-        /*height: 40px;*/
-        /*margin: 2px;*/
-    /*}*/
+    .col-xs-1{
+        width: 40px;
+        height: 40px;
+        margin: 1px;
+    }
 
-/*}*/
-/*@media (max-width: 970px)and (min-width: 767px) {*/
+}
+@media (max-width: 970px)and (min-width: 767px) {
 
-    /*.col-xs-1 {*/
-        /*width: 85px;*/
-        /*height: 85px;*/
-        /*margin: 3px;*/
-    /*}*/
+    .col-xs-1 {
+        width: 85px;
+        height: 85px;
+        margin: 3px;
+    }
 
-/*}*/
+}
